--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mcamara/laravel-localization": "^1.5",
+        "twilio/sdk": "^6.8",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
